# krywok-codetable

./: README.md  pyproject.toml
codetable/core/: codetable.py
codetable/modes/: i18n.py
